+fixed unCamelification of object keys +hr between array of objects

--- a/views/mdd.html
+++ b/views/mdd.html
@@ -5,12 +5,13 @@
 	<div ng-repeat="d in data">
 		<mdd data="d"></mdd>
 	</div>
+	<hr>
 </div>
 
 <!-- SINGLE OBJECT -->
 <div ng-if="isComplexObject(data)">
 	<div ng-repeat="(key,value) in data">
-		{{uncamelCase(key)}} 
+		{{unCamelCase(key)}} 
 		<br>
 		<mdd data="value"></mdd>	
 	</div>
